Fixes some nullpointers and refactoring code (misuse of ResultDTO in Lock)